dyeti-frontend/src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1.5;
  color: rgb(255 255 255 / 87%);
  text-rendering: optimizelegibility;

  color-scheme: light dark;
  background-color: #242424;

  font-synthesis: none;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

body {
  min-width: 320px;
  min-height: 100dvh;
  margin: 0;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  cursor: pointer;

  padding: 0.6em 1.2em;
  border: 1px solid transparent;
  border-radius: 8px;

  font-family: inherit;
  font-size: 1em;
  font-weight: 500;

  background-color: #1a1a1a;

  transition: border-color 0.25s;
}

button:hover {
  border-color: #646cff;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #fff;
  }

  a:hover {
    color: #747bff;
  }

  button {
    background-color: #f9f9f9;
  }
}

